// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`computeBoolean can compute the result of several course expressions 1`] = `
{
  "$booleanType": "or",
  "$or": [
    {
      "$course": {
        "department": [
          "CSCI",
        ],
        "number": 121,
      },
      "$type": "course",
      "_checked": true,
      "_result": false,
    },
    {
      "$course": {
        "department": [
          "CSCI",
        ],
        "number": 125,
      },
      "$type": "course",
      "_checked": true,
      "_request": {
        "department": [
          "CSCI",
        ],
        "number": 125,
      },
      "_result": true,
      "_taken": true,
    },
  ],
  "$type": "boolean",
}
`;

exports[`computeBoolean can compute the result of several course expressions 2`] = `
[
  {
    "department": [
      "CSCI",
    ],
    "number": 125,
  },
]
`;

exports[`computeBoolean can compute the result of several modifier expressions 1`] = `
{
  "$and": [
    {
      "$children": "$all",
      "$count": {
        "$num": 3,
        "$operator": "$gte",
      },
      "$from": "children",
      "$type": "modifier",
      "$what": "course",
      "_checked": true,
      "_counted": 3,
      "_matches": [
        {
          "_extraKeys": [
            "credits",
          ],
          "credits": 1,
          "department": [
            "ART",
          ],
          "number": 120,
        },
        {
          "_extraKeys": [
            "credits",
          ],
          "credits": 1,
          "department": [
            "ART",
          ],
          "number": 104,
        },
        {
          "_extraKeys": [
            "credits",
          ],
          "credits": 1,
          "department": [
            "ART",
          ],
          "number": 105,
        },
      ],
      "_result": true,
    },
    {
      "$children": [
        {
          "$requirement": "A",
          "$type": "reference",
        },
        {
          "$requirement": "C",
          "$type": "reference",
        },
      ],
      "$count": {
        "$num": 2,
        "$operator": "$gte",
      },
      "$from": "children",
      "$type": "modifier",
      "$what": "credit",
      "_checked": true,
      "_counted": 3,
      "_matches": [
        {
          "_extraKeys": [
            "credits",
          ],
          "credits": 1,
          "department": [
            "ART",
          ],
          "number": 120,
        },
        {
          "_extraKeys": [
            "credits",
          ],
          "credits": 1,
          "department": [
            "ART",
          ],
          "number": 104,
        },
        {
          "_extraKeys": [
            "credits",
          ],
          "credits": 1,
          "department": [
            "ART",
          ],
          "number": 105,
        },
      ],
      "_result": true,
    },
  ],
  "$booleanType": "and",
  "$type": "boolean",
}
`;

exports[`computeBoolean can compute the result of several modifier expressions 2`] = `
[
  {
    "_extraKeys": [
      "credits",
    ],
    "credits": 1,
    "department": [
      "ART",
    ],
    "number": 120,
  },
  {
    "_extraKeys": [
      "credits",
    ],
    "credits": 1,
    "department": [
      "ART",
    ],
    "number": 104,
  },
  {
    "_extraKeys": [
      "credits",
    ],
    "credits": 1,
    "department": [
      "ART",
    ],
    "number": 105,
  },
]
`;

exports[`computeBoolean can compute the result of several occurrence expressions 1`] = `
{
  "$booleanType": "or",
  "$or": [
    {
      "$count": {
        "$num": 1,
        "$operator": "$gte",
      },
      "$course": {
        "department": [
          "THEAT",
        ],
        "number": 222,
      },
      "$type": "occurrence",
      "_checked": true,
      "_counted": 0,
      "_matches": [],
      "_result": false,
    },
    {
      "$count": {
        "$num": 3,
        "$operator": "$gte",
      },
      "$course": {
        "department": [
          "THEAT",
        ],
        "number": 266,
      },
      "$type": "occurrence",
      "_checked": true,
      "_counted": 3,
      "_matches": [
        {
          "department": [
            "THEAT",
          ],
          "number": 266,
          "semester": 1,
          "year": 2014,
        },
        {
          "department": [
            "THEAT",
          ],
          "number": 266,
          "semester": 3,
          "year": 2014,
        },
        {
          "department": [
            "THEAT",
          ],
          "number": 266,
          "semester": 1,
          "year": 2015,
        },
      ],
      "_result": true,
    },
  ],
  "$type": "boolean",
}
`;

exports[`computeBoolean can compute the result of several occurrence expressions 2`] = `
[
  {
    "department": [
      "THEAT",
    ],
    "number": 266,
    "semester": 1,
    "year": 2014,
  },
  {
    "department": [
      "THEAT",
    ],
    "number": 266,
    "semester": 3,
    "year": 2014,
  },
  {
    "department": [
      "THEAT",
    ],
    "number": 266,
    "semester": 1,
    "year": 2015,
  },
]
`;

exports[`computeBoolean can compute the result of several of-expressions 1`] = `
{
  "$and": [
    {
      "$count": {
        "$num": 1,
        "$operator": "$gte",
      },
      "$of": [
        {
          "$course": {
            "department": [
              "CSCI",
            ],
            "number": 121,
          },
          "$type": "course",
          "_checked": true,
          "_result": false,
        },
        {
          "$course": {
            "department": [
              "CSCI",
            ],
            "number": 125,
          },
          "$type": "course",
          "_checked": true,
          "_request": {
            "department": [
              "CSCI",
            ],
            "number": 125,
          },
          "_result": true,
          "_taken": true,
        },
      ],
      "$type": "of",
      "_checked": true,
      "_counted": 1,
      "_matches": [
        {
          "department": [
            "CSCI",
          ],
          "number": 125,
        },
      ],
      "_result": true,
    },
    {
      "$count": {
        "$num": 1,
        "$operator": "$gte",
      },
      "$of": [
        {
          "$course": {
            "department": [
              "ART",
            ],
            "number": 102,
          },
          "$type": "course",
          "_checked": true,
          "_request": {
            "department": [
              "ART",
            ],
            "number": 102,
          },
          "_result": true,
          "_taken": true,
        },
        {
          "$course": {
            "department": [
              "ART",
            ],
            "number": 103,
          },
          "$type": "course",
          "_checked": true,
          "_result": false,
        },
      ],
      "$type": "of",
      "_checked": true,
      "_counted": 1,
      "_matches": [
        {
          "department": [
            "ART",
          ],
          "number": 102,
        },
      ],
      "_result": true,
    },
  ],
  "$booleanType": "and",
  "$type": "boolean",
}
`;

exports[`computeBoolean can compute the result of several of-expressions 2`] = `
[
  {
    "department": [
      "CSCI",
    ],
    "number": 125,
  },
  {
    "department": [
      "ART",
    ],
    "number": 102,
  },
]
`;

exports[`computeBoolean can compute the result of several other boolean expressions 1`] = `
{
  "$and": [
    {
      "$booleanType": "or",
      "$or": [
        {
          "$course": {
            "department": [
              "CSCI",
            ],
            "number": 121,
          },
          "$type": "course",
          "_checked": true,
          "_result": false,
        },
        {
          "$course": {
            "department": [
              "CSCI",
            ],
            "number": 125,
          },
          "$type": "course",
          "_checked": true,
          "_request": {
            "department": [
              "CSCI",
            ],
            "number": 125,
          },
          "_result": true,
          "_taken": true,
        },
      ],
      "$type": "boolean",
      "_checked": true,
      "_matches": [
        {
          "department": [
            "CSCI",
          ],
          "number": 125,
        },
      ],
      "_result": true,
    },
    {
      "$booleanType": "or",
      "$or": [
        {
          "$course": {
            "department": [
              "CSCI",
            ],
            "number": 130,
          },
          "$type": "course",
          "_checked": true,
          "_request": {
            "department": [
              "CSCI",
            ],
            "number": 130,
          },
          "_result": true,
          "_taken": true,
        },
        {
          "$course": {
            "department": [
              "CSCI",
            ],
            "number": 131,
          },
          "$type": "course",
          "_checked": true,
          "_result": false,
        },
      ],
      "$type": "boolean",
      "_checked": true,
      "_matches": [
        {
          "department": [
            "CSCI",
          ],
          "number": 130,
        },
      ],
      "_result": true,
    },
  ],
  "$booleanType": "and",
  "$type": "boolean",
}
`;

exports[`computeBoolean can compute the result of several other boolean expressions 2`] = `
[
  {
    "department": [
      "CSCI",
    ],
    "number": 125,
  },
  {
    "department": [
      "CSCI",
    ],
    "number": 130,
  },
]
`;

exports[`computeBoolean can compute the result of several requirement references 1`] = `
{
  "$and": [
    {
      "$requirement": "A",
      "$type": "reference",
      "_checked": true,
      "_matches": [
        {
          "department": [
            "ART",
          ],
          "number": 120,
        },
      ],
      "_result": true,
    },
    {
      "$requirement": "C",
      "$type": "reference",
      "_checked": true,
      "_matches": [
        {
          "department": [
            "ART",
          ],
          "number": 104,
        },
        {
          "department": [
            "ART",
          ],
          "number": 105,
        },
      ],
      "_result": true,
    },
  ],
  "$booleanType": "and",
  "$type": "boolean",
}
`;

exports[`computeBoolean can compute the result of several requirement references 2`] = `
[
  {
    "department": [
      "ART",
    ],
    "number": 120,
  },
  {
    "department": [
      "ART",
    ],
    "number": 104,
  },
  {
    "department": [
      "ART",
    ],
    "number": 105,
  },
]
`;

exports[`computeBoolean can compute the result of several where-expressions 1`] = `
{
  "$and": [
    {
      "$count": {
        "$num": 1,
        "$operator": "$gte",
      },
      "$distinct": false,
      "$type": "where",
      "$where": {
        "$key": "gereqs",
        "$operator": "$eq",
        "$type": "qualification",
        "$value": "WRI",
      },
      "_checked": true,
      "_counted": 1,
      "_matches": [
        {
          "department": [
            "CSCI",
          ],
          "gereqs": [
            "WRI",
          ],
          "number": 125,
        },
      ],
      "_result": true,
    },
    {
      "$count": {
        "$num": 1,
        "$operator": "$gte",
      },
      "$distinct": false,
      "$type": "where",
      "$where": {
        "$key": "gereqs",
        "$operator": "$eq",
        "$type": "qualification",
        "$value": "BTS-T",
      },
      "_checked": true,
      "_counted": 1,
      "_matches": [
        {
          "department": [
            "ART",
          ],
          "gereqs": [
            "BTS-T",
          ],
          "number": 102,
        },
      ],
      "_result": true,
    },
  ],
  "$booleanType": "and",
  "$type": "boolean",
}
`;

exports[`computeBoolean can compute the result of several where-expressions 2`] = `
[
  {
    "department": [
      "CSCI",
    ],
    "gereqs": [
      "WRI",
    ],
    "number": 125,
  },
  {
    "department": [
      "ART",
    ],
    "gereqs": [
      "BTS-T",
    ],
    "number": 102,
  },
]
`;

exports[`computeBoolean computes an or-clause even if the first item is false 1`] = `
{
  "$booleanType": "or",
  "$or": [
    {
      "$course": {
        "department": [
          "CSCI",
        ],
        "number": 121,
      },
      "$type": "course",
      "_checked": true,
      "_result": false,
    },
    {
      "$course": {
        "department": [
          "CSCI",
        ],
        "number": 125,
      },
      "$type": "course",
      "_checked": true,
      "_request": {
        "department": [
          "CSCI",
        ],
        "number": 125,
      },
      "_result": true,
      "_taken": true,
    },
  ],
  "$type": "boolean",
}
`;

exports[`computeBoolean computes an or-clause even if the first item is false 2`] = `
[
  {
    "department": [
      "CSCI",
    ],
    "number": 125,
  },
]
`;

exports[`computeBoolean computes the boolean result of and-clauses 1`] = `
{
  "$and": [
    {
      "$course": {
        "department": [
          "CSCI",
        ],
        "number": 121,
      },
      "$type": "course",
      "_checked": true,
      "_request": {
        "department": [
          "CSCI",
        ],
        "number": 121,
      },
      "_result": true,
      "_taken": true,
    },
    {
      "$course": {
        "department": [
          "CSCI",
        ],
        "number": 125,
      },
      "$type": "course",
      "_checked": true,
      "_request": {
        "department": [
          "CSCI",
        ],
        "number": 125,
      },
      "_result": true,
      "_taken": true,
    },
  ],
  "$booleanType": "and",
  "$type": "boolean",
}
`;

exports[`computeBoolean computes the boolean result of and-clauses 2`] = `
[
  {
    "department": [
      "CSCI",
    ],
    "number": 121,
  },
  {
    "department": [
      "CSCI",
    ],
    "number": 125,
  },
]
`;

exports[`computeBoolean computes the boolean result of or-clauses 1`] = `
{
  "$booleanType": "or",
  "$or": [
    {
      "$course": {
        "department": [
          "CSCI",
        ],
        "number": 121,
      },
      "$type": "course",
      "_checked": true,
      "_request": {
        "department": [
          "CSCI",
        ],
        "number": 121,
      },
      "_result": true,
      "_taken": true,
    },
    {
      "$course": {
        "department": [
          "CSCI",
        ],
        "number": 125,
      },
      "$type": "course",
      "_checked": true,
      "_request": {
        "department": [
          "CSCI",
        ],
        "number": 125,
      },
      "_result": false,
      "_taken": true,
    },
  ],
  "$type": "boolean",
}
`;

exports[`computeBoolean computes the boolean result of or-clauses 2`] = `
[
  {
    "department": [
      "CSCI",
    ],
    "number": 121,
  },
]
`;
